--- a/multiple/multiple_uwsgi.ini
+++ b/multiple/multiple_uwsgi.ini
@@ -3,20 +3,24 @@
 
 # Django-related settings
 # the base directory (full path)
-chdir           = /home/debian/django/multiple/
+chdir           = /home/debian/django/multiple/multiple/
 # Django's wsgi file
 module          = multiple.wsgi
 # the virtualenv (full path)
-home            = /home/debian/.virtualenvs/django/
+home            = /home/debian/.virtualenvs/multiple/
 
 # process-related settings
 # master
 master          = true
 # maximum number of worker processes
-processes       = 10
+processes       = 20
 # the socket (use the full path to be safe
 socket          = /home/debian/django/multiple/multiple/multiple.sock
+#socket = 0.0.0.0:8001
 # ... with appropriate permissions - may be needed
-# chmod-socket    = 664
+chmod-socket    = 666
 # clear environment on exit
 vacuum          = true
+
+# Log to File
+logto = /home/debian/django/multiple/multiple/uwsgi_log.log
