--- a/multiple/mysite_nginx.conf
+++ b/multiple/mysite_nginx.conf
@@ -3,33 +3,36 @@
 # the upstream component nginx needs to connect to
 upstream django {
     # server unix:///path/to/your/mysite/mysite.sock; # for a file socket
-    # server 127.0.0.1:8001; # for a web port socket (we'll use this first)
-    server unix:///home/debian/django/multiple/multiple/multiple.sock;
+    #server 127.0.0.1:8001; # for a web port socket (we'll use this first)
+     server unix:///home/debian/django/multiple/multiple/multiple.sock;
 }
 
 # configuration of the server
 server {
     # the port your site will be served on
-    listen      8000;
+    listen      80;
     # the domain name it will serve for
-    server_name 10.0.2.15; # substitute your machine's IP address or FQDN
-    charset     utf-8;
+    # server_name 10.0.2.15; # substitute your machine's IP address or FQDN
+    #charset     utf-8;
 
     # max upload size
     client_max_body_size 75M;   # adjust to taste
 
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
     # Django media
     location /media  {
-        alias /home/debian/django/multiple/media;  # your Django project's media files - amend as required
+        alias /home/debian/django/multiple/multiple/media;  # your Django project's media files - amend as required
     }
 
     location /static {
-        alias /home/debian/django/multiple/static; # your Django project's static files - amend as required
+       alias /home/debian/django/multiple/multiple/static; # your Django project's static files - amend as required
     }
 
     # Finally, send all non-media requests to the Django server.
     location / {
+        include  /home/debian/django/multiple/multiple/uwsgi_params; # the uwsgi_params file you installed
         uwsgi_pass  django;
-        include     /home/debian/django/multiple/multiple/uwsgi_params; # the uwsgi_params file you installed
     }
 }
